tests/machine/x/zig/closure.error
zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/closure.zig:9:16: error: no field named 'call' in struct 'closure.makeAdder__struct_3386'
/workspace/mochi/tests/machine/x/zig/closure.zig:7:13: note: struct declared here
/workspace/mochi/tests/machine/x/zig/closure.zig:4:24: note: called from here

// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:58:31Z
const std = @import("std");

const add10 = makeAdder(10); // fn(i32) i32

fn makeAdder(n: i32) fn(i32) i32 {
    return (struct { n: i32, fn call(self: @This(), x: i32) i32 {
        return (x + self.n);
} }{ .n = n }).call;
}

pub fn main() void {
    std.debug.print("{d}\n", .{add10(7)});
}
