tests/machine/x/zig/closure.zig
// Generated by Mochi compiler v0.10.27 on 2025-07-17T17:59:22Z
const std = @import("std");

const add10 = makeAdder(10); // fn(i32) i32

fn makeAdder(n: i32) fn(i32) i32 {
    return (blk: { const closure = struct { n: i32, }{ .n = n }; break :blk struct { fn inner(x: i32) i32 {
        return (x + closure.n);
} }.inner; });
}

pub fn main() void {
    std.debug.print("{d}\n", .{add10(7)});
}
